// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FirmwareDialog should render empty div if not visible 1`] = `<div />`;

exports[`FirmwareDialog should render visible dialog with custom text 1`] = `
<ConfirmationDialog
  cancelButtonText="No"
  isInProgress={false}
  isVisible={true}
  okButtonText="Yes"
  onCancel={[Function]}
  onOk={[Function]}
  text="Do you confirm?"
/>
`;

exports[`FirmwareDialog should render visible dialog with default text for given port 1`] = `
<ConfirmationDialog
  cancelButtonText="No"
  isInProgress={false}
  isVisible={true}
  okButtonText="Yes"
  onCancel={[Function]}
  onOk={[Function]}
  text="Would you like to program the development kit on /dev/tty1 (1337) with the required firmware?"
/>
`;
